--- a/package.json
+++ b/package.json
@@ -19,9 +19,10 @@
     "react-redux": "^8.0.7",
     "react-router": "^6.11.2",
     "react-router-dom": "^6.11.2",
-    "react-scripts": "^2.1.3",
+    "react-scripts": "^5.0.1",
     "redux": "^4.2.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "@babel/plugin-proposal-private-property-in-object": "^7.16.0"
   },
   "scripts": {
     "start": "react-scripts --openssl-legacy-provider start",
